[gd_scene load_steps=3 format=3 uid="uid://c8j5veq3qxnvs"]

[ext_resource type="Script" path="res://scripts/bullet_pattern.gd" id="1_0yvnj"]
[ext_resource type="PackedScene" path="res://scenes/enemy_bullet.tscn" id="2_yvnj2"]

[node name="BulletPattern" type="Node2D"]
script = ExtResource("1_0yvnj")
bullet_scene = ExtResource("2_yvnj2")

[node name="FireTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]